@@ -21,12 +21,6 @@
 /*A little bug fixed by Mykola <mykola@2ka.mipt.ru>:) */
 
 
-#include <string.h>
-#include <sys/time.h>
-#include <time.h>
-#include <sys/sysinfo.h>
-#include <stdlib.h>
-
 #include "misc.h"
 #include "../chart/chart.h"
 
@@ -51,6 +45,7 @@ typedef struct {
 
 static chart_class *k;
 
+#if defined __linux__
 static int
 net_get_load(net_priv *c)
 {
@@ -91,6 +86,16 @@ net_get_load(net_priv *c)
     RET(TRUE);
 
 }
+#else
+
+static int
+net_get_load(net_priv *c)
+{
+    ENTER;
+    RET(0);
+}
+
+#endif
 
 
 static int
